# stock_alert

./: .env.backend.example  .env.frontend.example  .gitignore  docker-compose.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  schemas.py  trend_worker.py  worker.py
backend/app/routers/: alerts.py  status.py  ticker_trends.py
backend/app/services/: alert_engine.py  apewisdom_client.py  notifier.py  ratio_fetcher.py  trend_repository.py  trend_service.py  types.py
backend/tests/: conftest.py  test_apewisdom_client.py  test_ticker_trends_api.py  test_trend_repository.py  test_trend_service.py
frontend/: .dockerignore  .env.local.example  Dockerfile  README.md  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx
frontend/components/: alert-status-badge.tsx  alerts-table.tsx  connection-status.tsx  create-alert-dialog.tsx  dashboard.tsx  ratio-card.tsx  ticker-trends-table.tsx
frontend/hooks/: use-dashboard-data.ts  use-ticker-trends.ts
frontend/lib/: api.ts  format.ts  types.ts
